# plantilla-markdown

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
docs/: index.md  other.md
other/: index.html
search/: search_index.json
